--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "acorn": "^6.1.1",
     "acorn-dynamic-import": "^4.0.0",
+    "backbone": "^1.4.0",
     "browser-sync": "^2.26.7"
   }
 }
